app/assets/stylesheets/admin/_admin_bar.scss
.m-admin_bar {
  position: fixed;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  border-bottom: 1px solid $color-border-light;
  padding: 0 10px;
  width: 100%;
  z-index: 100;
  background-color: $color-pale-blue;

  h3 a {
    font-family: $header-font;
    white-space: nowrap;
  }
}

.m-admin_bar__item {
  margin: 5px 10px 0;
  padding: 5px;
  border-bottom: solid 2px transparent;
}

.m-admin_bar__item:hover {
  border-bottom: solid 2px $color-blue;
}

.m-admin_bar__item--is-selected {
  border-bottom: solid 2px $color-blue;
}

